Added working code to request api's

--- a/src/ckad-requester/appsettings.json
+++ b/src/ckad-requester/appsettings.json
@@ -3,7 +3,16 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "System.Net.Http.HttpClient": "Error"
     }
+  },
+  "Worker": {
+    "Websites": [
+      {
+        "Url": "https://sahb.dk/",
+        "NumberOfThreads": 10
+      }
+    ]
   }
 }
